--- a/components/header/index.css
+++ b/components/header/index.css
@@ -1,9 +1,7 @@
 /* Header */
 .header {
-  background-color: #f8fcff;
   height: 100vh;
-  padding: 20px 60px;
-  width: 100vw;
+  width: 100%;
 }
 
 /* Nav */
