--- a/components/testimonials/index.css
+++ b/components/testimonials/index.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 60px 0;
+  padding: 60px;
 }
 
 .section-testimonials__info {
