modified inner and outer links

--- a/components/footer/index.html
+++ b/components/footer/index.html
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer id="footer" class="footer">
   <div class="footer__nav">
     <ul class="footer__list">
       <li class="footer__list-item">
@@ -6,11 +6,11 @@
       </li>
 
       <li class="footer__list-item">
-        <a class="footer__link" href="#">How it works</a>
+        <a class="footer__link" href="#feature">How it works</a>
       </li>
 
       <li class="footer__list-item">
-        <a class="footer__link" href="#">Contact</a>
+        <a class="footer__link" href="#footer">Contact</a>
       </li>
     </ul>
 
@@ -61,15 +61,21 @@
       <li class="footer__list-item">
         <ul class="footer__list footer__list-social">
           <li class="footer__list-item">
-            <i class="fa-brands fa-facebook-f icon"></i>
+            <a href="https://www.facebook.com/cleversamerr" target="_blank">
+              <i class="fa-brands fa-facebook-f icon"> </i>
+            </a>
           </li>
 
           <li class="footer__list-item">
-            <i class="fa-brands fa-instagram icon"></i>
+            <a href="https://twitter.com/cleversamerr" target="_blank"
+              ><i class="fa-brands fa-twitter icon"></i
+            ></a>
           </li>
 
           <li class="footer__list-item">
-            <i class="fa-brands fa-youtube icon"></i>
+            <a href="https://github.com/cleversamerr" target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
           </li>
         </ul>
       </li>
